Fixes chracter selection element crowding other elements on smaller screens

--- a/cps/static/css/caliBlur_override.css
+++ b/cps/static/css/caliBlur_override.css
@@ -90,3 +90,10 @@ div#Downloads_list {
     width: 100%;
     padding-bottom: 3rem;
 }
+
+/* Prevents the character button group from showing on smaller screens */
+@media (max-width: 1605px) {
+    .btn-group.character.hidden-sm {
+        display: none;
+    }
+}
